--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ header{
         overflow: hidden;
         
        }
-       nav a{ 
+       /* nav a{ 
         color: antiquewhite;
         text-decoration: none;
         display: block;
         padding: 15px;
         text-align: center;
-       }
+       } */
        
        
 
